--- a/css/fun/fun3.css
+++ b/css/fun/fun3.css
@@ -27,18 +27,17 @@ body{
 }
 .article{
     display: flex;
-    height: auto;
+    height: 1000vh;
     width: 70vw;
     background-color: #f5f1ee;
     position: absolute;
-    left: 20vw;
-    top: 10vh;
+    margin-left: 15vw;
 }
 .content{
     height:100%;
     width: 70vw;
-    top: 25vh;
     position:absolute;
+    margin-top: 10vh;
 }
 a{
     color: blue;
@@ -47,10 +46,9 @@ a:hover{
     color: rgb(10, 10, 10);
 }
 .money-title{
-    height: 30vh;
+    height: 22vh;
     width: 70vw;
     position: relative;
-    margin-left: 1vw;
 }
 .part0{
     position: relative;
@@ -64,63 +62,63 @@ a:hover{
 }
 .part1{
     position: relative;
-    height: 150vh;
+    height: 110vh;
     width: 70vw;
     margin-top: 15vh;
 }
 .photo1{
     position: relative;
-    height: 44vh;
+    height: 32vh;
     width: 70vw;
 }
 .word1{
     position: relative;
-    height: 30vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 42vw;
+    margin-top: -25vh;
 }
 .photo1-1{
     position: relative;
-    height: 44vh;
+    height: 32vh;
     width: 70vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 .word1-1{
     position: relative;
-    height: 30vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 42vw;
+    margin-top: -25vh;
 }
 .word1-2{
     position: relative;
-    height: 30vh;
+    height: 8vh;
     width: 70vw;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: 20vh;
+    margin-top: 7vh;
 }
 .part2{
     position: relative;
-    height: 150vh;
+    height: 145vh;
     width: 70vw;
-    margin-top: 35vh;
+    margin-top: 15vh;
 }
 .photo2{
     position: relative;
-    height: 44vh;
+    height: 49vh;
     width: 70vw;
 }
 .photo2-1{
     position: relative;
-    height: 44vh;
+    height: 49vh;
     width: 70vw;
-    margin-top: 25vh;
+    margin-top: 5vh;
 }
 .photo2-2{
     position: relative;
@@ -130,183 +128,182 @@ a:hover{
 }
 .word2{
     position: relative;
-    height: 30vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 23vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -50vh;
+    margin-left: 40vw;
+    margin-top: -35vh;
 }
 .word2-1{
     position: relative;
-    height: 30vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 29vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -50vh;
+    margin-left: 40vw;
+    margin-top: -35vh;
 }
 .word2-2{
     position: relative;
-    height: 30vh;
+    height: 10vh;
     width: 70vw;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: 30vh;
+    margin-top: 5vh;
 }
 .part3{
     position: relative;
-    height: 130vh;
+    height: 125vh;
     width: 70vw;
-    margin-top: 75vh;
+    margin-top: 15vh;
 }
 .photo3{
     position: relative;
-    height: 50vh;
+    height: 43vh;
     width: 70vw;
 }
 .word3{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -45vh;
+    margin-left: 42vw;
+    margin-top: -30vh;
 }
 .word3-3{
     position: relative;
-    height: 7vh;
-    width: 65vw;
-    font-size: 24px;
+    height: 14vh;
+    width: 70vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: 10vh;
-    margin-left: 1vw;
+    margin-top: 5vh;
 }
 .photo3-1{
     position: relative;
-    height: 44vh;
+    height: 32vh;
     width: 70vw;
-    margin-top: 25vh;
+    margin-top: 5vh;
 }
 .word3-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 42vw;
+    margin-top: -25vh;
 }
 .part4{
     position: relative;
-    margin-top: 75vh;
+    margin-top: 5vh;
 }
 .part5{
     position: relative;
-    height: 130vh;
+    height: 220vh;
     width: 70vw;
-    margin-top: 35vh;
+    margin-top: 15vh;
 }
 .photo5-1{
     position: relative;
-    height: 50vh;
+    height: 43vh;
     width: 70vw;
 }
 .word5-1{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 5vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
     margin-left: 37vw;
-    margin-top: -45vh;
+    margin-top: -25vh;
 }
 .photo5-2{
     position: relative;
     height: 44vh;
     width: 70vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 .word5-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 40vw;
+    margin-top: -30vh;
 }
 .photo5-3{
     position: relative;
     height: 44vh;
     width: 70vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 .word5-3{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: -40vh;
-    margin-left: 37vw;
+    margin-left: 40vw;
+    margin-top: -30vh;
 }
 .photo5-4{
     position: relative;
     height: 44vh;
     width: 70vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 .word5-4{
     position: relative;
-    height: 35vh;
-    width: 35vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: -40vh;
-    margin-left: 37vw;
+    margin-left: 40vw;
+    margin-top: -30vh;
 }
 .part6{
     position: relative;
     height: 130vh;
     width: 70vw;
-    margin-top: 135vh;
+    margin-top: 15vh;
 }
 .photo6-1{
     position: relative;
-    height: 50vh;
+    height: 42vh;
     width: 70vw;
 }
 .word6-1{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -45vh;
+    margin-left: 40vw;
+    margin-top: -30vh;
 }
 .photo6-2{
     position: relative;
     height: 44vh;
     width: 70vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 .word6-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 40vw;
+    margin-top: -30vh;
 }
 .word6-3{
     position: relative;
-    height: 35vh;
+    height: 8vh;
     width: 70vw;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     margin-top: 15vh;
 }
@@ -314,37 +311,37 @@ a:hover{
     position: relative;
     height: 130vh;
     width: 70vw;
-    margin-top: 55vh;
+    margin-top: 15vh;
 }
 .photo7{
     position: relative;
-    height: 50vh;
+    height: 42vh;
     width: 70vw;
     margin-top: 10vh;
 }
 .word7{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -35vh;
+    margin-left: 42vw;
+    margin-top: -30vh;
 }
 .photo7-1{
     position: relative;
-    height: 50vh;
+    height: 33vh;
     width: 70vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 .word7-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -35vh;
+    margin-left: 40vw;
+    margin-top: -25vh;
 }
 .top{
     float: left;
@@ -364,8 +361,8 @@ a:hover{
     font-family: jp;
     font-weight: bold;
     background-color: rgb(192, 151, 112);
-    margin-left: 45vw;
-    margin-top:25vh;
+    margin-left: 50vw;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
