--- a/css/fun/fun2.css
+++ b/css/fun/fun2.css
@@ -27,15 +27,14 @@ body{
 }
 .article{
     display: flex;
-    height: auto;
+    height: 1000vh;
     width: 70vw;
     background-color: #f5f1ee;
     position: absolute;
-    left: 20vw;
-    top: 10vh;
+    margin-left: 15vw;
 }
 .content{
-    height:100%;
+    height:980vh;
     width: 70vw;
     top: 25vh;
     position:absolute;
@@ -55,7 +54,9 @@ a:hover{
 .part0{
     position: relative;
     margin-top: 15vh;
-    font-size: 32px
+    width: 70vw;
+    height: 10vh;
+    font-size: 32px;
 }
 .part4{
     position: relative;
@@ -64,139 +65,138 @@ a:hover{
 }
 .part1{
     position: relative;
-    height: 150vh;
+    height: 140vh;
     width: 70vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 .photo1{
     position: relative;
-    height: 44vh;
+    height: 42vh;
     width: 70vw;
 }
 .word1{
     position: relative;
-    height: 30vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 42vw;
+    margin-top: -30vh;
 }
 .photo1-1{
     position: relative;
-    height: 44vh;
+    height: 38vh;
     width: 70vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 .word1-1{
     position: relative;
-    height: 30vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 42vw;
+    margin-top: -30vh;
 }
 .word1-2{
     position: relative;
-    height: 30vh;
+    height: 15vh;
     width: 70vw;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: 20vh;
+    margin-top: 15vh;
 }
 .part2{
     position: relative;
-    height: 150vh;
+    height: 200vh;
     width: 70vw;
-    margin-top: 35vh;
+    margin-top: 15vh;
 }
 .photo2{
     position: relative;
-    height: 44vh;
+    height: 48vh;
     width: 70vw;
 }
 .photo2-1{
     position: relative;
-    height: 44vh;
+    height: 48vh;
     width: 70vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 .photo2-2{
     position: relative;
-    height: 44vh;
+    height: 48vh;
     width: 70vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 .word2{
     position: relative;
-    height: 30vh;
+    height: 25vh;
     width: 30vw;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     margin-left: 37vw;
-    margin-top: -50vh;
+    margin-top: -35vh;
 }
 .word2-1{
     position: relative;
-    height: 30vh;
+    height: 25vh;
     width: 30vw;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     margin-left: 37vw;
-    margin-top: -50vh;
+    margin-top: -35vh;
 }
 .word2-2{
     position: relative;
-    height: 30vh;
+    height: 10vh;
     width: 70vw;
     font-size: 24px;
     font-weight: bold;
-    margin-top: 30vh;
+    margin-top: 5vh;
 }
 .part3{
     position: relative;
-    height: 130vh;
+    height: 125vh;
     width: 70vw;
-    margin-top: 75vh;
+    margin-top: 15vh;
 }
 .photo3{
     position: relative;
-    height: 50vh;
+    height: 42vh;
     width: 70vw;
 }
 .word3{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 22vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -45vh;
+    margin-left: 42vw;
+    margin-top: -30vh;
 }
 .word3-1{
     position: relative;
-    height: 7vh;
-    width: 65vw;
-    font-size: 24px;
+    height: 10vh;
+    width: 70vw;
+    font-size: 18px;
     font-weight: bold;
     margin-top: 10vh;
-    margin-left: 1vw;
 }
 .photo3-1{
     position: relative;
-    height: 44vh;
+    height: 34vh;
     width: 70vw;
-    margin-top: 25vh;
+    margin-top: 15vh;
 }
 .word3-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 25vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 42vw;
+    margin-top: -25vh;
 }
 .photo3-2{
     position: relative;
@@ -215,85 +215,85 @@ a:hover{
 }
 .part4{
     position: relative;
-    margin-top: 75vh;
+    margin-top: 15vh;
 }
 .part5{
     position: relative;
-    height: 130vh;
+    height: 133vh;
     width: 70vw;
-    margin-top: 35vh;
+    margin-top: 15vh;
 }
 .photo5-1{
     position: relative;
-    height: 50vh;
+    height: 44vh;
     width: 70vw;
 }
 .word5-1{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 30vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -45vh;
+    margin-left: 39vw;
+    margin-top: -35vh;
 }
 .photo5-2{
     position: relative;
-    height: 44vh;
+    height: 43vh;
     width: 70vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 .word5-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 18vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 39vw;
+    margin-top: -30vh;
 }
 .word5-3{
     position: relative;
-    height: 35vh;
+    height: 10vh;
     width: 70vw;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     margin-top: 15vh;
 }
 .part6{
     position: relative;
-    height: 130vh;
+    height: 121vh;
     width: 70vw;
-    margin-top: 55vh;
+    margin-top: 15vh;
 }
 .photo6-1{
     position: relative;
-    height: 50vh;
+    height: 43vh;
     width: 70vw;
 }
 .word6-1{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 25vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -45vh;
+    margin-left: 40vw;
+    margin-top: -35vh;
 }
 .photo6-2{
     position: relative;
-    height: 44vh;
+    height: 43vh;
     width: 70vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 .word6-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -40vh;
+    margin-left: 40vw;
+    margin-top: -33vh;
 }
 .word6-3{
     position: relative;
@@ -305,39 +305,39 @@ a:hover{
 }
 .part7{
     position: relative;
-    height: 130vh;
+    height: 110vh;
     width: 70vw;
-    margin-top: 55vh;
+    margin-top: 15vh;
 }
 .photo7{
     position: relative;
-    height: 50vh;
+    height: 32vh;
     width: 70vw;
     margin-top: 10vh;
 }
 .word7{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -35vh;
+    margin-left: 42vw;
+    margin-top: -25vh;
 }
 .photo7-1{
     position: relative;
-    height: 50vh;
+    height: 35vh;
     width: 70vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
 }
 .word7-2{
     position: relative;
-    height: 35vh;
-    width: 30vw;
-    font-size: 24px;
+    height: 20vh;
+    width: 25vw;
+    font-size: 18px;
     font-weight: bold;
-    margin-left: 37vw;
-    margin-top: -35vh;
+    margin-left: 42vw;
+    margin-top: -25vh;
 }
 .top{
     float: left;
@@ -358,7 +358,7 @@ a:hover{
     font-weight: bold;
     background-color: rgb(192, 151, 112);
     margin-left: 45vw;
-    margin-top:25vh;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
