--- a/css/train/train3.css
+++ b/css/train/train3.css
@@ -26,76 +26,30 @@ body{
     font-family: jp;
 }
 .article{
-    display: flex;
-    height: auto;
-    width: 70vw;
+    height: 100%;
+    width: 90vw;
     background-color: #f5f1ee;
     position: absolute;
-    left: 20vw;
-    top: 10vh;
+    margin-left: 4vw;
 }
 .content{
-    height: 60vh;
-    width: 70vw;
+    height: 55vh;
+    width: 60vw;
     top: 35vh;
     margin-left: 10vw;
     position:absolute;
 }
 .money-title{
-    height: 30vh;
-    width: 70vw;
+    height: 28vh;
+    width: 52vw;
     position: relative;
-    margin-left: -15vw;
-}
-.Q{
-    height: 240px;
-    width: 220px;
-    border: 30px solid #c7b299;
-    border-radius: 180px;
-    position: relative;
-    z-index: 3;
-}
-.line{
-    height: 100px;
-    width: 1px;
-    border: 18px solid #c7b299;
-    border-radius: 10px;
-    transform: rotate(-50deg);
-    position: relative;
-    left: 135px;
-    top: -70px;
-    z-index: 1;
-}
-.ret2{
-    height: 150px;
-    width: 600px;
-    background-color: #d8cabc;
-    border-radius: 90px;
-    position: relative ;
-    top: -190px;
-    left: 149px;
-    z-index: 0;
-}
-.mword{
-    font-size: 35px;
-    text-align: center;
-    font-weight: bold;
-    font-family: jp;
-    padding-top: 45px;
-    padding-left: 35px;
-}
-.photo5{
-    position: relative;
-    left: -10px;
-    top: -8px;
-    z-index: 2;
 }
 .video{
     position: relative;
     height: 50vh;
     width: 50vw;
+    margin-top: 2vh;
     margin-left: 5vw;
-    margin-top: 5vh;
 }
 .top{
     float: left;
@@ -115,8 +69,8 @@ body{
     font-family: jp;
     font-weight: bold;
     background-color: rgb(192, 151, 112);
-    margin-left: 45vw;
-    margin-top:95vh;
+    margin-left: 75vw;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
