--- a/css/train/train5.css
+++ b/css/train/train5.css
@@ -26,25 +26,23 @@ body{
     font-family: jp;
 }
 .article{
-    display: flex;
-    height: auto;
-    width: 70vw;
+    height: 100%;
+    width: 90vw;
     background-color: #f5f1ee;
     position: absolute;
-    left: 20vw;
-    top: 10vh;
+    margin-left: 4vw;
 }
 .content{
-    height: 60vh;
-    width: 70vw;
+    height: 55vh;
+    width: 60vw;
     top: 35vh;
+    margin-left: 10vw;
     position:absolute;
 }
 .money-title{
-    height: 30vh;
-    width: 70vw;
+    height: 28vh;
+    width: 52vw;
     position: relative;
-    margin-left: 1vw;
 }
 .Q{
     height: 240px;
@@ -92,8 +90,8 @@ body{
     position: relative;
     height: 50vh;
     width: 50vw;
+    margin-top: 2vh;
     margin-left: 5vw;
-    margin-top: 5vh;
 }
 .top{
     float: left;
@@ -113,8 +111,8 @@ body{
     font-family: jp;
     font-weight: bold;
     background-color: rgb(192, 151, 112);
-    margin-left: 45vw;
-    margin-top:95vh;
+    margin-left: 75vw;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
@@ -134,4 +132,4 @@ a{
         top: 15px;
         right: 35px;
     }
-}
+} 
